# aws-assume-role

./: Cargo.toml  Dockerfile  README.md
src/: crdgen.rs  main.rs  resource.rs
