[package]
name = "aws-assume-role"
version = "1.0.0"
edition = "2024"
default-run = "aws-assume-role"
description = "The AWS assume role operator"
homepage = "https://github.com/wdonne/aws-assume-role"
repository = "https://github.com/wdonne/aws-assume-role"
license = "BSD-2-Clause"
readme = "README.md"
keywords = ["kubernetes", "operator", "aws", "iam", "role"]
exclude = ["*.iml"]

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "resource"
path = "src/resource.rs"

[dependencies]
kube = { version = "2.0.1", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.26.0", features = ["v1_30"] }
schemars = "1.1.0"
serde = "1.0.228"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
kube-operator-util = "1.0.0"
tokio = { version = "1.48.0", features = ["full"] }
log = "0.4.28"
thiserror = "2.0.17"
anyhow = "1.0.100"
futures = "0.3.31"
aws-config = { version = "1.8.10", features = ["behavior-version-latest"] }
aws-sdk-sts = "1.91.0"
aws-sdk-ecr = "1.98.0"
uuid = { version = "1.18.1", features = ["v4"] }
base64 = "0.22.1"
rustls = { version = "0.23.35", features = ["ring"] }
env_logger = "0.11.8"
