[package]
name = "aws-assume-role"
version = "1.0.1"
edition = "2024"
default-run = "aws-assume-role"
description = "The AWS assume role operator"
homepage = "https://github.com/wdonne/aws-assume-role"
repository = "https://github.com/wdonne/aws-assume-role"
license = "BSD-2-Clause"
readme = "README.md"
keywords = ["kubernetes", "operator", "aws", "iam", "role"]
exclude = ["*.iml"]

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "resource"
path = "src/resource.rs"

[dependencies]
kube = { version = "3.0.0", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.27.0", features = ["v1_31"] }
schemars = "1.2.0"
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9.34+deprecated"
kube-operator-util = "1.0.0"
tokio = { version = "1.49.0", features = ["full"] }
log = "0.4.29"
thiserror = "2.0.18"
anyhow = "1.0.100"
futures = "0.3.31"
aws-config = { version = "1.8.12", features = ["behavior-version-latest"] }
aws-sdk-sts = "1.96.0"
aws-sdk-ecr = "1.105.0"
uuid = { version = "1.19.0", features = ["v4"] }
base64 = "0.22.1"
rustls = { version = "0.23.36", features = ["ring"] }
env_logger = "0.11.8"
chrono = "0.4.43"
